--- a/main.css
+++ b/main.css
@@ -1,3 +1,49 @@
-.container .row .col-md-4 .rr{
+.container-fluid .row .col-md-4 h1{
+    font-size: 6vw;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    /*font-size: 13.5px;*/
+}
+.container-fluid .row .col-md-4 p{
+    top: 0;
+    font-size: 7vw;
+    line-height: 10px;
     color: #95999c;
+}
+.container-fluid .row .col-md-4{
+margin-top: 25vw;
+    margin-left: 10vw;
+}
+/*col-md-6*/
+.container-fluid .row .col-md-6{
+    margin-top: 23vw;
+}
+/*//media mabilniga moslashtirish*/
+/*text mabilni*/
+@media screen and (max-width: 700px){
+   .container-fluid .row .col-md-4 {
+text-align: center;
+       margin-left: 0;
+       top: 0;
+   }
+}
+@media screen and (max-width: 700px){
+   .container-fluid .row .col-md-4 p{
+margin-left: 0;
+       font-size: 15vw;
+   }
+}
+@media screen and (max-width: 700px){
+   .container-fluid .row .col-md-4 h1{
+margin-left: 0;
+       font-size: 15vw;
+   }
+}
+/*col-md-6*/
+@media screen and (max-width: 700px){
+    .container-fluid .row .col-md-6{
+       margin: 0;
+        padding: 0;
+    }
 }
